# hackathon

./: .gitignore  Dockerfile  alembic.ini  heroku.yml  pyproject.toml  setup.cfg
app/backend/: main.py
app/backend/api/errors/: validation_error.py
app/backend/api/routes/: __init__.py  user.py
app/backend/core/: config.py
app/backend/db/: __init__.py
app/backend/db/migrations/: env.py
app/backend/db/migrations/versions/: e5eaf2c069a1_init.py
app/backend/db/models/: __init__.py  user.py
app/backend/schema/: __init__.py  base.py  user.py
app/backend/services/: authentication.py  jwt.py
app/frontend/: package-lock.json  package.json  vue.config.js
app/frontend/src/: App.vue  main.js
app/frontend/src/components/: HelloWorld.vue  MapComponent.vue  NavBar.vue  PopupComponent.vue  informationPanel.vue
app/frontend/src/router/: index.js
app/frontend/src/sass/: variables.scss
app/frontend/src/store/: index.js
app/frontend/src/views/: Home.vue  Inprint.vue
app/static/: index.html
app/static/assets/css/: app.ca55cfc0.css  chunk-vendors.540b94b7.css  chunk-vendors.58f1b855.css  chunk-vendors.ddb87629.css
app/static/assets/js/: app.330097c4.js  app.330097c4.js.map  app.85d3cbdc.js  app.85d3cbdc.js.map  app.cfba48ac.js  app.cfba48ac.js.map  app.da23a3a9.js  app.da23a3a9.js.map  chunk-vendors.534cf55e.js  chunk-vendors.534cf55e.js.map  chunk-vendors.c8fa19d6.js  chunk-vendors.c8fa19d6.js.map  chunk-vendors.d2807911.js  chunk-vendors.d2807911.js.map  chunk-vendors.f07e4bf7.js  chunk-vendors.f07e4bf7.js.map
